renaming emojis and such

--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>cat collection</title>
-	<link rel="icon" type="image/x-icon" href="/!g/pix/dumy.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/silly-cat.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="cat.css" rel="stylesheet" type="text/css" media="all">
 	<!--	tooltip shit-->
