--- a/doqmeat/learning/javascript/smarter-way/index.html
+++ b/doqmeat/learning/javascript/smarter-way/index.html
@@ -66,7 +66,7 @@ document.getElementById("cookies").innerHTML = totalCookiesIveEaten;
     <p>learning about <code>x++</code> and <code>x--</code></p>
     <p>good lord this one was a bit confusing....</p>
     <p>okay so <code>num++;</code> is a short way of writing <code>num = num + 1;</code></p>
-    <p>but then when used in this example it confuses me so much... bc to me this makes no sense <img src="/!g/pix/emote1crying.gif" alt=""></p>
+    <p>but then when used in this example it confuses me so much... bc to me this makes no sense <img src="/!g/pix/crying.gif" alt=""></p>
     <img src="!g/240201.jpg" width="90%" alt="screenshot from the ebook">
     <p>i just dont get how <i>"the 2nd statement boots its value to 2."</i> and yet <code>newnum</code> gets the original value of 1. that's what i'm having trouble wrapping my head around...</p>
     <p>maybe i'll get it in the long run LOL.</p>
