--- a/doqmeat/masaaki-yuasa/index.html
+++ b/doqmeat/masaaki-yuasa/index.html
@@ -40,7 +40,7 @@ https://coolors.co/1553d8-87ca21-f1e72a-f6a90d-cc19ec
 			</summary>
 			<span class="comment">FINALLYY!!!
 				<br>so i've been binge watching adventure time for quite a while now, so i could understand the new <i>fionna and cake</i> series better. and my god have i been having such a blast!!!
-				<br><br>i've also been anticipating GREATLY this episode so i could finally cross it out of this list!<br>it was so charming and sweet in both the animation and writing. but oh lord the <b>animation</b>!!!!! it stands out so well. what a treat was it to watch! i really just love masaaki yuasa's work so much. it also had a very colorful palette, as his works usually do. just MUAH <img src="/!g/pix/catheart1.gif">
+				<br><br>i've also been anticipating GREATLY this episode so i could finally cross it out of this list!<br>it was so charming and sweet in both the animation and writing. but oh lord the <b>animation</b>!!!!! it stands out so well. what a treat was it to watch! i really just love masaaki yuasa's work so much. it also had a very colorful palette, as his works usually do. just MUAH <img src="/!g/pix/heart-cat1">
 				<br><br>and like i previously mentioned, the episode itself was pretty neat! basically <span class="spoiler">finn and jake are experiencing the cycle of life throughout this episode by becoming birds, worms, bacteria, flowers etc etc and so the cycle continues!</span> adventure time has its Very random episodes here and there, and while this is one of them, this is def one of the more unique ones (i am so unbiased rn) [26.sep.23]
 			</span>
 		</details>
