--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -52,7 +52,7 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
-					<p><b>22.jun.25 - 3am</b> haven't been to work for the past week cus i'm with a cold but my god have i gotten a throwback to my unemployment days <img src="/!g/pix/emote1laugh.gif"> been spending most of my days with steve watching <a title="letterboxd profile" href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">movies</a>, playing either <a title="bloodborne log" href="../vgs/games/bloodborne/index.html">bloodborne</a> or <i>overwatch 2</i>, and going through a <a href="https://javascript.info" target="_blank" class="outlink">javascript online tutorial</a> <small>while having sooo many throwbacks to my <i>intro to programming</i> uni class with C++</small>. i miss having a lot of free time but also... i am okay with how things currently are :3 it's just a bit hard to find that balance of responsibilities and having fun.</p>
+					<p><b>22.jun.25 - 3am</b> haven't been to work for the past week cus i'm with a cold but my god have i gotten a throwback to my unemployment days <img src="/!g/pix/laugh.gif"> been spending most of my days with steve watching <a title="letterboxd profile" href="https://letterboxd.com/doqmeat/" target="_blank" class="outlink">movies</a>, playing either <a title="bloodborne log" href="../vgs/games/bloodborne/index.html">bloodborne</a> or <i>overwatch 2</i>, and going through a <a href="https://javascript.info" target="_blank" class="outlink">javascript online tutorial</a> <small>while having sooo many throwbacks to my <i>intro to programming</i> uni class with C++</small>. i miss having a lot of free time but also... i am okay with how things currently are :3 it's just a bit hard to find that balance of responsibilities and having fun.</p>
 				</article>
 				<article>
 					<p><b>17.jun.25 - 10pm</b> it is truly my biggest wish to leave somewhere where there aren't constant power outages. my dream. picture this: you have a fever and suddenly the power goes out. almost killed myself.</p>
@@ -125,13 +125,13 @@
 					<p><b>25.jan.25 - 1pm</b> this C++ shit is scary bro <img src="/!g/pix/catsweat.gif" alt=""></p>
 				</article>
 				<article>
-					<p><b>22.jan.25 - 5pm</b> when i mention the horrors i am talking about the political horrors happening in the US btw. which will inevitably affect PR. specially with our stupid ass governor.... wanting to make a statue of trump here... <img src="/!g/pix/catangry.gif"> i need a lot specific people to die so i can be at peace.</p>
+					<p><b>22.jan.25 - 5pm</b> when i mention the horrors i am talking about the political horrors happening in the US btw. which will inevitably affect PR. specially with our stupid ass governor.... wanting to make a statue of trump here... <img src="/!g/pix/angry-cat.gif"> i need a lot specific people to die so i can be at peace.</p>
 				</article>
 				<article>
-					<p><b>21.jan.25 - 4pm</b> first day of 2nd year of uni was very nice despite the horrors. there's something about studying again that does make me want to work on my website more compared to when i was in winter break... it's probably just that i really wanted to play video games and chill during my break <img src="/!g/pix/emote1laugh.gif" alt=""></p>
+					<p><b>21.jan.25 - 4pm</b> first day of 2nd year of uni was very nice despite the horrors. there's something about studying again that does make me want to work on my website more compared to when i was in winter break... it's probably just that i really wanted to play video games and chill during my break <img src="/!g/pix/laugh.gif" alt=""></p>
 				</article>
 				<article>
-					<p><b>16.jan.25 - 4pm</b> i would love to get into those hobonichi planners but like.... will it be any different from my normal ass planner... no... do i still want one... yes... <img src="/!g/pix/cat.gif" alt=""></p>
+					<p><b>16.jan.25 - 4pm</b> i would love to get into those hobonichi planners but like.... will it be any different from my normal ass planner... no... do i still want one... yes... <img src="/!g/pix/annoyed-cat" alt=""></p>
 				</article>
 				<article><b>06.jan.25 - 3pm</b> might do another rework of my homepage + the music index too. for my homepage, it feels a bit cluttered tbh and there's just some sections that i don't really use or are a bit unnecesary. i would also like to decorate it a bit more. we will see.</article>
 			</section>
@@ -184,7 +184,7 @@
 				</article>
 
 				<article>
-					<p id="241030"><b>30.oct.24 - 12am</b> woke up today to a laggy af laptop and when i restart it i get an error that my FANS are not working properly...... <img src="/!g/pix/emote1scared.gif" alt=""> opened my laptop up, 1 out of the 2 fans was so so so dusty... i cleaned it up, plug it out and in but it doesn't spin while the other one does. ordered some replacement fans which i hope will fix the fans issue. and i also found out that my laptop was being super slow because the CPU was capping itself at 0.20 ghz... i'm guessing it somehow knows theres an issue with the fans and it's capping itself on purpose so it doesn't get cooked. the weird thing is that my laptop has been WAYYY hotter before and the CPU has never capped itself. but i guess this is a bit different? this laptop was pretty expensive ($1k, for my standards) and its about to be 3 years old next march so i feel like if it kicks the bucket this early, i might actually sob <img src="/!g/pix/emote1crying.gif" alt=""> i have an external mini fan blowing cool air to the back of the laptop and the CPU hasn't capped itself yet. so at least i know <b>it is</b> related to the fans.</p>
+					<p id="241030"><b>30.oct.24 - 12am</b> woke up today to a laggy af laptop and when i restart it i get an error that my FANS are not working properly...... <img src="/!g/pix/emote1scared.gif" alt=""> opened my laptop up, 1 out of the 2 fans was so so so dusty... i cleaned it up, plug it out and in but it doesn't spin while the other one does. ordered some replacement fans which i hope will fix the fans issue. and i also found out that my laptop was being super slow because the CPU was capping itself at 0.20 ghz... i'm guessing it somehow knows theres an issue with the fans and it's capping itself on purpose so it doesn't get cooked. the weird thing is that my laptop has been WAYYY hotter before and the CPU has never capped itself. but i guess this is a bit different? this laptop was pretty expensive ($1k, for my standards) and its about to be 3 years old next march so i feel like if it kicks the bucket this early, i might actually sob <img src="/!g/pix/crying.gif" alt=""> i have an external mini fan blowing cool air to the back of the laptop and the CPU hasn't capped itself yet. so at least i know <b>it is</b> related to the fans.</p>
 				</article>
 				<article>
 					<p><b>27.oct.24 - 10pm</b> okay i drew for a little bit but the entire time i kept feeling like it was a waste of my time... sign... maybe i gotta try other methods of drawing</p>
@@ -218,7 +218,7 @@
 					<p><b>06.sep.24 - 12pm</b> thank you to my neighbor for giving me her wifi password <img src="/!g/pix/emote1lov.gif" alt=""> now doing web stuff won't be as annoying.</p>
 				</article>
 				<article id="240830">
-					<p><b>30.aug.24 - 3pm</b> - just added a new featured song n album to my <a href="/music">music</a> page! i really miss doing those in-depth <small>or at least somewhat</small> logs of new albums and EPs i'd listen to for my <a href="/music/listening-log/index.html">listening log</a> :( there's a lot of things i'm not able to spend that much time on because you know. i have a life now. but listening to new music and being able to extensively talk about it is something that i really miss from my days of unlimited free time. i also wish it didn't take me so long to write coherent paragraphs. i'm very insecure about my writing. <img src="/!g/pix/emote1emba.gif"></p>
+					<p><b>30.aug.24 - 3pm</b> - just added a new featured song n album to my <a href="/music">music</a> page! i really miss doing those in-depth <small>or at least somewhat</small> logs of new albums and EPs i'd listen to for my <a href="/music/listening-log/index.html">listening log</a> :( there's a lot of things i'm not able to spend that much time on because you know. i have a life now. but listening to new music and being able to extensively talk about it is something that i really miss from my days of unlimited free time. i also wish it didn't take me so long to write coherent paragraphs. i'm very insecure about my writing. <img src="/!g/pix/overwhelmed.gif"></p>
 				</article>
 
 				<article id="240829">
@@ -249,7 +249,7 @@
 				</article>
 
 				<article>
-					<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <img src="/!g/pix/dumy.gif" alt="emoji">
+					<p><b>23.jul.24 - 1pm</b> after fighting for my life for the past 3 months filling out job applications i finally <b>got a job!!!!!</b> jesus, it was about damn time!!! i'm very happy because i really needed this. <small>who doesn't in this economy...</small> i hope i'll do good here :) i'll be getting some celebratory ice cream tomorrow <img src="/!g/pix/silly-cat.gif" alt="emoji">
 					</p>
 				</article>
 
@@ -268,7 +268,7 @@
 				</article>
 
 				<article>
-					<p><b>08.jul.24 - 12pm</b> wishing more sites i liked had an RSS feed i could subscribe to... i'm thinking of doing a tutorial of sorts though i just made one yesterday <img src="/!g/pix/emote1cofa.gif" alt=""></p>
+					<p><b>08.jul.24 - 12pm</b> wishing more sites i liked had an RSS feed i could subscribe to... i'm thinking of doing a tutorial of sorts though i just made one yesterday <img src="/!g/pix/laugh-covering-face.gif" alt=""></p>
 				</article>
 
 				<article>
