--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -410,7 +410,7 @@
 				<div class="hov">
 					<div class="caption">
 						<h3>zero : fever part 2 - ateez</h3>
-						<p>bought this super cheap from ebay and the only reason why i got this album is because of it's photobook.... i only like 1 song from the album itself <img src="/!g/pix/catbored.gif"> BUT!!!! it contains one of my fav photoshoots. i love the colors a whole lot and the set as well. i think its so creative!</p>
+						<p>bought this super cheap from ebay and the only reason why i got this album is because of it's photobook.... i only like 1 song from the album itself <img src="/!g/pix/bored-cat.gif"> BUT!!!! it contains one of my fav photoshoots. i love the colors a whole lot and the set as well. i think its so creative!</p>
 						<a class="i" href="pics/ateez-fever-p2-book-page1.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page1.jpg" style="width:100%"></a>
 						<a class="i" href="pics/ateez-fever-p2-book-page2.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page2.jpg" style="width:100%"></a>
 						<a class="i" href="pics/ateez-fever-p2-book-page3.jpg" target="_blank"><img src="pics/ateez-fever-p2-book-page3.jpg" style="width:100%"></a>
