--- a/doqmeat/music/fav-albums/index.html
+++ b/doqmeat/music/fav-albums/index.html
@@ -350,7 +350,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p><img src="!g/cds/trpp-trpp.jpg" width="40%" class="r-img">one of my fav dreampop / shoegaze albums EVERRR.</p>
 					<p>and they are also one of my fav bands in those genres as well.</p>
 					<p>this album is just a lot of fun while also being very soft. idk hot to really describe it but i love it a lot.</p>
-					<p><img src="!g/cds/trpp-cd.png" width="40%" align="left" style="margin-right:10px;rotate:20deg;">and i also own the CD!! i got it from their bandcamp and it cost me like $60 bc of the shipping from korea <img src="/!g/pix/emote1holan.gif"> but it was so worth it</p>
+					<p><img src="!g/cds/trpp-cd.png" width="40%" align="left" style="margin-right:10px;rotate:20deg;">and i also own the CD!! i got it from their bandcamp and it cost me like $60 bc of the shipping from korea <img src="/!g/pix/annoyed.gif"> but it was so worth it</p>
 					<p>there has been many times where i just pop this up on my CD player and fall asleep to it. i dream of angels everytime i do it</p>
 					<p><b>fav songs:</b> a joke <img src="/!g/pix/staryellow.gif"> yeah <img src="/!g/pix/staryellow.gif"> pause <img src="/!g/pix/staryellow.gif"> home dance <img src="/!g/pix/staryellow.gif"> liars</p>
 					<p><b>links:</b> <a href="https://trppmusic.bandcamp.com/album/trpp" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/4MCb03enJHRY5ovHpoHWQT?si=oyBTezVERnmVTbb1SDTR1Q" target="_blank">spotify</a> / <a href="https://youtu.be/IC4e-FZAAio" target="_blank">youtube</a></p>
