--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -23,7 +23,7 @@
 	<div id="frame">
 		<h2>welcome...</h2>
 		<img src="!g/index/cat-dj.png" width="30%" align="left" style="margin:10px;border-radius:10px" alt="cat on a DJ scratcher">
-		<p>to my music page! dedicated to everything that i listen to and love <img src="/!g/pix/cat-heart.gif"></p>
+		<p>to my music page! dedicated to everything that i listen to and love <img src="/!g/pix/heart-cat.gif"></p>
 
 		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
 
