--- a/doqmeat/music/playlists.html
+++ b/doqmeat/music/playlists.html
@@ -38,7 +38,7 @@
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0h2yJhCJMyDMl8weg5X5bm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-		<p>this one is for songs that make me feel things. mostly songs that make be hmmmm like <img src="/!g/pix/emote1crying.gif"> but you know, sometimes i am having the worst day ever or i am in a horrible mood, and i put on this playlist and i just get a little bit of relief.</p>
+		<p>this one is for songs that make me feel things. mostly songs that make be hmmmm like <img src="/!g/pix/crying.gif"> but you know, sometimes i am having the worst day ever or i am in a horrible mood, and i put on this playlist and i just get a little bit of relief.</p>
 
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4YjpbteyZyB8qytBOCpDYM?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
