--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -56,29 +56,29 @@
 
 		<h2 id="emo">emoticons</h2>
 		<h3 id="cat-emo">cats</h3>
-		<img src="/!g/pix/cat3dots.gif">
-		<img src="/!g/pix/catangry.gif">
+		<img src="/!g/pix/thinking-cat.gif">
+		<img src="/!g/pix/angry-cat.gif">
 		<img src="/!g/pix/catbath.gif">
 		<img src="/!g/pix/kittypink.gif">
-		<img src="/!g/pix/catblink.gif">
-		<img src="/!g/pix/catbored.gif">
+		<img src="/!g/pix/blink-cat.gif">
+		<img src="/!g/pix/bored-cat.gif">
 		<img src="/!g/pix/catbutter.gif">
 		<img src="/!g/pix/catdance.gif">
 		<img src="/!g/pix/catdizzy.gif">
 		<img src="/!g/pix/catfall.gif">
 		<img src="/!g/pix/catflustared.gif">
-		<img src="/!g/pix/cathappy.gif">
+		<img src="/!g/pix/happy-hearts-cat.gif">
 		<img src="/!g/pix/catidea.gif">
 		<img src="/!g/pix/catheadswing.gif">
 		<img src="/!g/pix/catheart.gif">
 		<img src="/!g/pix/catidea.gif">
 		<img src="/!g/pix/catjam.gif">
 		<img src="/!g/pix/catloaf.gif">
-		<img src="/!g/pix/catlove.gif">
+		<img src="/!g/pix/kiss-cat.gif">
 		<img src="/!g/pix/catmusicnote.gif">
 		<img src="/!g/pix/catroll.gif">
 		<img src="/!g/pix/catscared.gif">
-		<img src="/!g/pix/catrun.gif">
+		<img src="/!g/pix/running-cat.gif">
 		<img src="/!g/pix/catslap.gif">
 		<img src="/!g/pix/catsob.gif">
 		<img src="/!g/pix/catsob1.gif">
@@ -95,26 +95,26 @@
 		<img src="/!g/pix/cateepyy.gif">
 		<img src="/!g/pix/catgrey.gif">
 		<img src="/!g/pix/cathead.gif">
-		<img src="/!g/pix/catmizu3.gif">
+		<img src="/!g/pix/black-cat.gif">
 		<img src="/!g/pix/mizu2.gif">
 		<img src="/!g/pix/2ofem.gif">
-		<img src="/!g/pix/catheart1.gif">
+		<img src="/!g/pix/heart-cat1">
 		<img src="/!g/deco/catlaying.gif">
 		<img src="/!g/pix/bluecat.gif">
 		<img src="/!g/pix/cat-ghost.gif">
-		<img src="/!g/pix/cat-sleepy-jasminnie.gif">
+		<img src="/!g/pix/sleep-cat.gif">
 		<img src="/!g/pix/catblue.gif">
 		<img src="/!g/pix/catblob.gif">
-		<img src="/!g/pix/cat-heart.gif">
+		<img src="/!g/pix/heart-cat.gif">
 		<img src="/!g/pix/cat-tail.gif">
 		<img src="/!g/pix/kittypink.gif">
 		<img src="/!g/pix/cat-music.gif">
-		<img src="/!g/pix/dumy.gif">
+		<img src="/!g/pix/silly-cat.gif">
 		<img src="/!g/pix/cat-paw.gif">
-		<img src="/!g/pix/cathi.gif">
+		<img src="/!g/pix/hi-cat.gif">
 		<img src="/!g/pix/gaycat.gif">
-		<img src="/!g/pix/catkiss.gif">
-		<img src="/!g/pix/cat.gif">
+		<img src="/!g/pix/kiss-cat2.gif">
+		<img src="/!g/pix/annoyed-cat">
 
 
 
@@ -131,22 +131,22 @@
 
 		<h3 id="other-emo">other emoticons</h3>
 		<img src="/!g/pix/emote13dots.gif">
-		<img src="/!g/pix/emote1angy.gif">
-		<img src="/!g/pix/emote1bubbles.gif">
-		<img src="/!g/pix/emote1cofa.gif">
-		<img src="/!g/pix/emote1cov.gif">
-		<img src="/!g/pix/emote1crying.gif">
-		<img src="/!g/pix/emote1down.gif">
-		<img src="/!g/pix/emote1emba.gif">
-		<img src="/!g/pix/emote1happy.gif">
-		<img src="/!g/pix/emote1happy2.gif">
-		<img src="/!g/pix/emote1heh.gif">
-		<img src="/!g/pix/emote1holan.gif">
-		<img src="/!g/pix/emote1laugh.gif">
+		<img src="/!g/pix/angry.gif">
+		<img src="/!g/pix/happy.gif">
+		<img src="/!g/pix/laugh-covering-face.gif">
+		<img src="/!g/pix/thinking.gif">
+		<img src="/!g/pix/crying.gif">
+		<img src="/!g/pix/down-emote.gif">
+		<img src="/!g/pix/overwhelmed.gif">
+		<img src="/!g/pix/happy1.gif">
+		<img src="/!g/pix/happy2.gif">
+		<img src="/!g/pix/heh.gif">
+		<img src="/!g/pix/annoyed.gif">
+		<img src="/!g/pix/laugh.gif">
 		<img src="/!g/pix/emote1lov.gif">
 		<img src="/!g/pix/emote1lov2.gif">
 		<img src="/!g/pix/emote1lov3.gif">
-		<img src="/!g/pix/emote1m.gif">
+		<img src="/!g/pix/laugh-hand-cheek.gif">
 		<img src="/!g/pix/emote1music.gif">
 		<img src="/!g/pix/emote1nya.gif">
 		<img src="/!g/pix/emote1plea.gif">
@@ -173,7 +173,7 @@
 		<img src="/!g/pix/emote2thumbup.gif">
 
 		<img src="/!g/pix/question-mark.gif">
-		<img src="/!g/pix/bunny-laugh.gif">
+		<img src="/!g/pix/jamming-bunny.gif">
 		<img src="/!g/pix/zzz.gif">
 		<img src="/!g/pix/eat.gif">
 		<img src="/!g/deco/silly.gif">
@@ -194,8 +194,8 @@
 
 		<h3 id="fav">favicons</h3>
 		<img src="/!g/pix/dress.gif">
-		<img src="/!g/pix/blog.gif">
-		<img src="/!g/pix/new2.gif">
+		<img src="/!g/pix/flower-purple.gif">
+		<img src="/!g/pix/exclamation.gif">
 		<img src="/!g/pix/book.gif">
 		<img src="/!g/pix/cloud%20with%20stars.gif">
 		<img src="/!g/pix/flowers234.gif">
@@ -222,7 +222,7 @@
 		<img src="/!g/pix/write.gif">
 		<img src="/!g/pix/letter.gif">
 		<img src="/!g/pix/postcard.gif">
-		<img src="/!g/pix/favcharas.gif">
+		<img src="/!g/pix/hi.gif">
 		<img src="/!g/pix/notebook.gif">
 		<img src="/!g/pix/butterfly5.gif">
 		<img src="/!g/pix/quotes.png">
@@ -396,7 +396,7 @@
 		<img src="/!g/pix/crismas.gif">
 		<img src="/!g/deco/cat-pond.gif">
 		<img src="/!g/deco/cat-walk.webp">
-		<img src="/!g/pix/cat-gasp.gif">
+		<img src="/!g/pix/gasp-cat.gif">
 		<img src="/!g/pix/cat-sweat.gif">
 
 		<h3>site icons</h3>
