--- a/doqmeat/october-movies/index.html
+++ b/doqmeat/october-movies/index.html
@@ -97,7 +97,7 @@ https://coolors.co/ffba71-bea8d2-9b6ccd
 			<summary><i>the lost boys</i> (1987)</summary>
 			<p>the only thing i knew about this movie was that they're vampires and that gay people fucking LOVE this movie.</p>
 			<p>it wass pretty alright!! i did not expect it to be as funny as it was tbh.</p>
-			<p>as i was watching this, my dad came into my room (WITH HIS BACK FACING THE TV) and within 2 (TWO) seconds of hearing the audio he said "man i love this movie!" and it made me laugh so much <img src="/!g/pix/emote1laugh.gif"> okay dad.</p>
+			<p>as i was watching this, my dad came into my room (WITH HIS BACK FACING THE TV) and within 2 (TWO) seconds of hearing the audio he said "man i love this movie!" and it made me laugh so much <img src="/!g/pix/laugh.gif"> okay dad.</p>
 			<p class="date-watched">watched on october 6</p>
 		</details>
 		<details>
