--- a/doqmeat/shrines/mizu/index.html
+++ b/doqmeat/shrines/mizu/index.html
@@ -9,7 +9,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>mizu shrine</title>
-	<link rel="shortcut icon" href="/!g/pix/catmizu3.gif">
+	<link rel="shortcut icon" href="/!g/pix/black-cat.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="mizu.css" rel="stylesheet" type="text/css" media="all">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
