--- a/doqmeat/vgs/games/cato/index.html
+++ b/doqmeat/vgs/games/cato/index.html
@@ -53,7 +53,7 @@
 		<div class="info"><b>genre/type: </b>platformer, CAT</div>
 		<div class="info"><b>links: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a>, <a class="hide" href="https://x.com/Cato_TeamWoll/status/1820830940404273619" target="_blank">body bg credit</a></div>
 		<h3>logs</h3>
-		<p><span class="date">07.sep.24</span> <b>cato released yesterday!!!!</b> i rushed to get this game <small>which btw it's a small discount!</small> and finally play it! out of all the demos i've played in the past year, this game has been the one that i've been looking forward to the most! <img src="/!g/pix/cat-heart.gif" alt=""></p>
+		<p><span class="date">07.sep.24</span> <b>cato released yesterday!!!!</b> i rushed to get this game <small>which btw it's a small discount!</small> and finally play it! out of all the demos i've played in the past year, this game has been the one that i've been looking forward to the most! <img src="/!g/pix/heart-cat.gif" alt=""></p>
 		<figure><img src="240907 (1).jpg" alt="screenshot of cato" width="100%">
 			<figcaption>world 2 starting level</figcaption>
 		</figure>
