--- a/doqmeat/vgs/games/celeste/index.html
+++ b/doqmeat/vgs/games/celeste/index.html
@@ -11,8 +11,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
 	<script>
-		(function($) {
-			$(document).ready(function() {
+		(function ($) {
+			$(document).ready(function () {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -37,7 +37,7 @@
 		<h4>logs</h4>
 		<p><span class="date">03.may.23</span>recently bought this game and its been soooo fun!! been finding myself relating to madeline So Much as well... i'm on chapter 7 so far. will be finishing it pretty soon! oh and the soundtrack by <a href="https://youtube.com/playlist?list=PLe1jcCJWvkWiWLp9h3ge0e5v7n6kxEfOG" target="_blank">lena raine</a> is so fucking goodddddd. you can read more of my thoughts on it <a title="listening log entry for celeste" href="/music/listening-log/2023/05.html#2" target="_blank">here</a>!</p>
 		<hr>
-		<p><span class="date">06.may.23</span>ok i finished it... man. i loved it a lot. not only were the chapters and level design super good, but it kinda surprised me how much i relate to madeline and her struggles <img src="/!g/pix/cathappy.gif"> i hope to learn a thing or two from the story. how you shouldn't push away the part of you that you hate and instead try to understand it's point of view and work together... idk man that was beautiful to me. and the challenges while a bit hard at times (i died 2k+ times im pretty sure) it was so rewarding to complete them once you Get It. i don't think i'll do it rn but i do wanna replay it so i can get all the blue hearts and play chapter 8</p>
+		<p><span class="date">06.may.23</span>ok i finished it... man. i loved it a lot. not only were the chapters and level design super good, but it kinda surprised me how much i relate to madeline and her struggles <img src="/!g/pix/happy-hearts-cat.gif"> i hope to learn a thing or two from the story. how you shouldn't push away the part of you that you hate and instead try to understand it's point of view and work together... idk man that was beautiful to me. and the challenges while a bit hard at times (i died 2k+ times im pretty sure) it was so rewarding to complete them once you Get It. i don't think i'll do it rn but i do wanna replay it so i can get all the blue hearts and play chapter 8</p>
 		<p><img src="celeste1strun.jpg" width="100%">
 		<p>screenshot from my first run!
 			<hr>
