--- a/doqmeat/vgs/games/minecraft/index.html
+++ b/doqmeat/vgs/games/minecraft/index.html
@@ -74,7 +74,7 @@
 
 		<details>
 			<summary>
-				<h4>des + helena (my gf <img src="/!g/pix/catheart1.gif">) world</h4>
+				<h4>des + helena (my gf <img src="/!g/pix/heart-cat1">) world</h4>
 			</summary>
 			<p>a world where me and my girlfriend currently play in!
 			<p>just started playing in this world so i dont have much to say about but i absolutely LOVE the seed that we got i mean this is just perfect. we spawned in a place FULL of flowers. like every corner had flowers
