--- a/doqmeat/vgs/games/prsk/index.html
+++ b/doqmeat/vgs/games/prsk/index.html
@@ -24,7 +24,7 @@
 		<div class="info"><b>genre/type: </b> rhythm, visual novel, gacha</div>
 		<nav class="info"><b>navigation: </b> <a href="#logs">logs</a> / <a href="#charas">fav groups & characters</a> / <a href="#cards">fav cards pulls</a> / <a href="#screenshots">screenshots</a></nav>
 		<h3 id="logs">logs</h3>
-		<p>okay the rumors are true. i enjoy playing the hatsune miku rhythm gacha game <img src="/!g/pix/catblink.gif"> tbh as long as i dont spent a single dollar on it we are chilling <img src="/!g/pix/emote2thumbup.gif"></p>
+		<p>okay the rumors are true. i enjoy playing the hatsune miku rhythm gacha game <img src="/!g/pix/blink-cat.gif"> tbh as long as i dont spent a single dollar on it we are chilling <img src="/!g/pix/emote2thumbup.gif"></p>
 		<p><span class="date">14.jul.23</span> been playing it on and off for a couple of months now! <mark>i play on english servers</mark>. i really enjoy the rhythm and visual novel aspect of it tbh. now whenever i just wanna numb my brain for a bit i just open this app instead of twitter, it has worked wonders</p>
 		<p><span class="date">21.mar.24</span> they have added 3 siinamota songs AND parley onuma's egoist !!!! so i redownloaded the game again :) i have yet to spend real money on this so we are still Good.</p>
 		<hr>
