--- a/doqmeat/webgarden/greenhouse.html
+++ b/doqmeat/webgarden/greenhouse.html
@@ -107,7 +107,7 @@
 
 	<div class="snowflakes">
 		<div class="snowflake"><img src="/!g/pix/flowers234.gif"></div>
-		<div class="snowflake"><img src="/!g/pix/blog.gif"></div>
+		<div class="snowflake"><img src="/!g/pix/flower-purple.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/flowerpink.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/lily.gif"></div>
 		<div class="snowflake"><img src="/!g/pix/butter2.gif"></div>
@@ -147,7 +147,7 @@
 			btn.innerHTML = "play"; //change the button to say play
 		}
 
-		player.onended = function() {
+		player.onended = function () {
 			isPlaying = false; //the song has ended, isPlaying is false
 			btn.innerHTML = "play"; //change the button to say play
 		}
