--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -26,7 +26,7 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 	<div id="wrapper">
 		<img src="/!g/deco/bunny2.gif" class="border" style="position:absolute;" width="400px" alt="background">
 		<div class="container">
-			<p class="desc">a <span title="they aren't exactly 'collections' but idk what else to call them...">collection</span> of things i like <img src="/!g/pix/cathi.gif" alt=""></p>
+			<p class="desc">a <span title="they aren't exactly 'collections' but idk what else to call them...">collection</span> of things i like <img src="/!g/pix/hi-cat.gif" alt=""></p>
 			<ul>
 				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-graphics/index.html">internet graphics</a></li>
 				<li><a href="cats/index.html">cat pics</a></li>
