--- a/doqmeat/vgs/games/hld/index.html
+++ b/doqmeat/vgs/games/hld/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8"> 
-<title>hyper light drifter</title>
-<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
-<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
-<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-<!-- tooltip shit -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-<script>
-							(function($){
-							$(document).ready(function(){
-							$("[title]").style_my_tooltips({
-							tip_follows_cursor: true,
-							tip_delay_time:10,
-							tip_fade_speed:10,
-							attribute:"title"
-							});
-							});
-							})(jQuery);
-</script>
-<!--  end of tooltip shit -->
 
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>hyper light drifter</title>
+	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
+	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+	<!-- tooltip shit -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
+	<script>
+		(function ($) {
+			$(document).ready(function () {
+				$("[title]").style_my_tooltips({
+					tip_follows_cursor: true,
+					tip_delay_time: 10,
+					tip_fade_speed: 10,
+					attribute: "title"
+				});
+			});
+		})(jQuery);
+	</script>
+	<!--  end of tooltip shit -->
 
-<div id="iframepc">
-<h2>hyper light drifter</h2>
-<div class="info"><b>release date: </b> mar 31, 2016</div>
-<div class="info"><b>developer: </b> heart machine</div>
-<div class="info"><b>genre/type: </b> action, adventure</div>
+</head>
 
-	<p>one of my fav games ever. i wish i could play this game for the first time. it has such an amazing atmosphere thanks to the beautiful pixel art and soundtrack. it can be so haunting at times and yet so peaceful. and the combat is just a blast as well. i remember my first time playing i was getting my ass kicked left and right <img src="/!g/pix/catbored.gif"> but now i slay (literally) every year that i replay it. i truly love this game a lot and i consider it to be my fav video game of all time <img src="/!g/pix/emote1lov2.gif"> hyper light drifter i love you!!!!!!</p>
+<body>
 
-<h4>screenshots</h4>
+	<div id="iframepc">
+		<h2>hyper light drifter</h2>
+		<div class="info"><b>release date: </b> mar 31, 2016</div>
+		<div class="info"><b>developer: </b> heart machine</div>
+		<div class="info"><b>genre/type: </b> action, adventure</div>
+
+		<p>one of my fav games ever. i wish i could play this game for the first time. it has such an amazing atmosphere thanks to the beautiful pixel art and soundtrack. it can be so haunting at times and yet so peaceful. and the combat is just a blast as well. i remember my first time playing i was getting my ass kicked left and right <img src="/!g/pix/bored-cat.gif"> but now i slay (literally) every year that i replay it. i truly love this game a lot and i consider it to be my fav video game of all time <img src="/!g/pix/emote1lov2.gif"> hyper light drifter i love you!!!!!!</p>
+
+		<h4>screenshots</h4>
 		<img src="hld3.jpg" width="100%">
-<img src="hld1.jpg" width="100%">
-<img src="hld10.jpg" width="100%">
-	<img src="hld11.jpg" width="100%">
-	<img src="hld12.jpg" width="100%">
-	<img src="hld2.jpg" width="100%">
-	<img src="hld4.jpg" width="100%">
-	<img src="hld5.jpg" width="100%">
+		<img src="hld1.jpg" width="100%">
+		<img src="hld10.jpg" width="100%">
+		<img src="hld11.jpg" width="100%">
+		<img src="hld12.jpg" width="100%">
+		<img src="hld2.jpg" width="100%">
+		<img src="hld4.jpg" width="100%">
+		<img src="hld5.jpg" width="100%">
 		<img src="hld6.jpg" width="100%">
 		<img src="hld8.jpg" width="100%">
 		<img src="hld9.jpg" width="100%">
 
-</div>
-<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
+	</div>
+	<footer><a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a></footer>
 </body>
+
 </html>
