--- a/doqmeat/vgs/games/sonic-rush/index.html
+++ b/doqmeat/vgs/games/sonic-rush/index.html
@@ -25,7 +25,6 @@
 			background: rgb(183, 208, 237);
 			background: linear-gradient(86deg, rgba(183, 208, 237, 1) 0%, rgba(210, 191, 239, 1) 100%);
 		}
-
 	</style>
 </head>
 
@@ -41,7 +40,7 @@
 		<h3>logs</h3>
 		<p> <span class="date">19.jun.24</span> i finally got the very last chaos emerald that was missing for sonic's timeline. <img title="literal picture of my 3DS bc i've had games crash using the screenshot tool and if that happened to me here i would have cried." src="chaos.jpg" width="35%" alt="pic of my 3DS" align="left" style="margin:10px;"> i still don't know if that's the correct word. i still need to complete sonic and blaze' final boss, but i have a feeling i might just leave it here for the time being. i don't feel like torturing myself just for the sake of a final boss. i rather just move on to something else. but i had my fun with this game!! now that i am Older i think i appreciate the game's mechanics and just overall feel of it wayyyy more. i might replay the earlier levels that i played when i was like 10 years old another time.</p>
 		<p>i remember the soundtrack <small>which i found on <a href="https://archive.org/details/SonicRushOST" target="_blank" class="outlink">internet archive</a> btw...</small> being super catchy when i was little as well but i can also appreciate it and jam way more nowadays. i find it a bit funny how so many things that i've grown to love in my music are present in this soundtrack.</p>
-		<p>but yeah that is pretty much my story with <i>sonic rush</i>. pretty fun overall. some bosses can be fun but others can be... such a pain. might be a skill issue on my part though BUT to be fair some of them can be quite annoying. i'll probably watch some final boss videos on youtube to see how the story in this game ends. blaze i will miss you meow meow... <img src="/!g/pix/catkiss.gif" alt=""></p>
+		<p>but yeah that is pretty much my story with <i>sonic rush</i>. pretty fun overall. some bosses can be fun but others can be... such a pain. might be a skill issue on my part though BUT to be fair some of them can be quite annoying. i'll probably watch some final boss videos on youtube to see how the story in this game ends. blaze i will miss you meow meow... <img src="/!g/pix/kiss-cat2.gif" alt=""></p>
 		<p>oh also playing this game has made me wanna replay <i>sonic the hedgehog (2006)</i> because that is another sonic game of my childhood. we'll see if i ever get to it. i also have <i>sonic mania</i> on my laptop <small>got it free on epic games</small> and i will probably also try that at some point too! lots of games too play...</p>
 		<hr>
 		<p><span class="date">09.jun.24</span> i have been playing this game on and off since i was like 9 years old... this game at this point has been ingrained in my brain as an iconic moment of my childhood. i love playing this game and it's <b>insane</b> <a title="youtube full OST" href="https://youtube.com/playlist?list=PLvNp0Boas721Cm9CWT9eaSq_JxA3f_NAr&si=2T4DhnaBrKZFcrxL" target="_blank">soundtrack</a> when i was little. it was also my introduction to the <i>sonic series</i> and probably why i love blaze the cat <small>meow meow</small> so much to this day <small>despite barely engaging in any sonic games throughtout my gamer life. </small></p>
